--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+spring.jwt.issuer=${JWT_ISSUER}
+spring.jwt.secret=${JWT_SECRET_KEY}
