fix: 댓글 조회 기능 게시글 기능으로 통합 게시글을 불러 올 때 댓글도 불러오므로 댓글 서비스에서 댓글조회 기능은 필요 없음 추가로, fetch join 을 통해 N+1문제 예방

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
+logging.level.org.hibernate.type=trace
+spring.output.ansi.enabled=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jwt.issuer=${JWT_ISSUER}
