refactor: JwtProperties 변경 application.properties에서 값 받도록 변경

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jwt.issuer=${JWT_ISSUER}
 spring.jwt.secret=${JWT_SECRET_KEY}
+spring.jwt.access-token-expiration=10m
+spring.jwt.refresh-token-expiration=14d
+spring.jwt.header-authorization=Authorization
+spring.jwt.access-token-prefix=Bearer
+spring.jwt.refresh-token-name=REFRESH_TOKEN
