--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,15 +7,20 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.highlight_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jwt.issuer=${JWT_ISSUER}
-spring.jwt.secret=${JWT_SECRET_KEY}
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
+jwt.issuer=${JWT_ISSUER}
+jwt.secret-key=${JWT_SECRET_KEY}
+jwt.access-token-expiration=10m
+jwt.refresh-token-expiration=14d
+jwt.header-authorization=Authorization
+jwt.access-token-prefix=Bearer
+jwt.refresh-token-name=REFRESH_TOKEN
 spring.output.ansi.enabled=ALWAYS
 logging.level.org.hibernate.type=trace
 logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr([%thread]){magenta} %clr(%-5level) %clr(%logger{36}){cyan} - %msg%n
 #logging.file.name=logs/application.log
 #logging.file.max-size=10MB
 #logging.file.max-history=30
-spring.jpa.properties.hibernate.jdbc.batch_size=1000
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
-spring.jpa.properties.hibernate.batch_versioned_data=true
