feat: OAuth2.0 인증 인가 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,7 +48,7 @@ spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_KEY}
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.google.scope=email, profile, openid
+spring.security.oauth2.client.registration.google.scope=email, profile
 # Kakao
 # registration
 spring.security.oauth2.client.registration.kakao.client-name=kakao
@@ -57,7 +57,7 @@ spring.security.oauth2.client.registration.kakao.client-secret=${KAKAO_CLIENT_KE
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, profile_image
-spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 # provider
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
