feat: 필터측 예외 처리 추가 URL 기반 권한 체크 실패 -> CustomAccessDeniedHandler 메소드 레벨 권한 체크 실패 (@PreAuthorize) -> GlobalExceptionHandler 인증되지 않은 사용자 -> AuthenticationEntryPoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=boilerplate
+#MVC
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
 # Database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${DB_URL}
