--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,29 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    //QueryDSL 추가
+    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs << "-Aquerydsl.generatedAnnotationClass=javax.annotation.Generated"
+}
+
+sourceSets {
+    main {
+        java.srcDirs("build/generated/sources/annotationProcessor/java/main")
+    }
+}
+
+clean {
+    delete file('build/generated/sources/annotationProcessor/java/main')
 }
 
 tasks.named('test') {
