--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,8 +6,48 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jwt.issuer=${JWT_ISSUER}
 spring.jwt.secret=${JWT_SECRET_KEY}
-spring.jwt.access-token-expiration=10m
-spring.jwt.refresh-token-expiration=14d
-spring.jwt.header-authorization=Authorization
-spring.jwt.access-token-prefix=Bearer
-spring.jwt.refresh-token-name=REFRESH_TOKEN
+# JWT
+jwt.issuer=${JWT_ISSUER}
+jwt.secret-key=${JWT_SECRET_KEY}
+jwt.access-token-expiration=10m
+jwt.refresh-token-expiration=14d
+jwt.remember-me-refresh-token-expiration=30d
+jwt.header-authorization=Authorization
+jwt.access-token-prefix=Bearer
+jwt.refresh-token-cookie-name=REFRESH_TOKEN
+jwt.remember-me-cookie-name=REMEMBER_ME
+# Naver
+# registration
+spring.security.oauth2.client.registration.naver.client-name=naver
+spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENT_ID}
+spring.security.oauth2.client.registration.naver.client-secret=${NAVER_CLIENT_KEY}
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email
+# provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+# Google
+# registration
+spring.security.oauth2.client.registration.google.client-name=google
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_KEY}
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.google.scope=email, profile
+# Kakao
+# registration
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+spring.security.oauth2.client.registration.kakao.client-id=${KAKAO_CLIENT_ID}
+spring.security.oauth2.client.registration.kakao.client-secret=${KAKAO_CLIENT_KEY}
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname, profile_image
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+# provider
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
