--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+# Redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.timeout=6000
 # JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
