feat: 인증 메일 전송 및 검증 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,13 @@ jwt.header-authorization=Authorization
 jwt.access-token-prefix=Bearer
 jwt.refresh-token-cookie-name=REFRESH_TOKEN
 jwt.remember-me-cookie-name=REMEMBER_ME
+# Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=boilerplate.mailing@gmail.com
+spring.mail.password=dzvlhfxbvublhnhm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 # Log
 spring.output.ansi.enabled=ALWAYS
 logging.level.org.hibernate.type=trace
