--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -22,6 +22,9 @@ spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.batch_versioned_data=true
+# AWS S3
+cloud.aws.s3.bucket=${AWS_S3_BUCKET}
+cloud.aws.s3.url-prefix=${AWS_S3_URL_PREFIX}
 # JWT
 jwt.issuer=${JWT_ISSUER}
 jwt.secret-key=${JWT_SECRET_KEY}
