feat: 프로메테우스 + 그라파나 APM 세팅

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation "software.amazon.awssdk:s3"
     implementation "software.amazon.awssdk:auth"
     implementation "software.amazon.awssdk:regions"
+    // APM (Monitoring)
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     // DB
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
