--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,6 +22,10 @@ spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.batch_versioned_data=true
+# APM
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
 # JWT
 jwt.issuer=${JWT_ISSUER}
 jwt.secret-key=${JWT_SECRET_KEY}
