feat: EC2, RDS, S3 배포 S3에 이미지 저장 안됨 OAuth2.0 로그인 안됨

--- a/.env.template
+++ b/.env.template
@@ -1,18 +1,14 @@
-# ✅ Database
 DB_URL=
 DB_USERNAME=
 DB_PASSWORD=
 
-# ✅ Redis
 REDIS_HOST=
-REDIS_PORT=6379
+REDIS_PORT=
 
-# ✅ JWT
 JWT_SECRET_KEY=
-JWT_ISSUER=boilerplate
+JWT_ISSUER=
 
-# ✅ Email (Gmail SMTP)
-SPRING_MAIL_USERNAME=boilerplate.mailing@gmail.com
+SPRING_MAIL_USERNAME=
 SPRING_MAIL_PASSWORD=
 
 # ✅ OAuth2 - Google
@@ -29,7 +25,7 @@ KAKAO_CLIENT_KEY=
 
 # ✅ Frontend
 FRONTEND_URL=
-RESET_PASSWORD_URI=
+FRONTEND_RESET_PASSWORD_URI=
 
 # ✅ AWS
 AWS_S3_BUCKET=
