--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # APP
-app.frontend.url=http://localhost:3000
-app.frontend.reset-password-uri=http://localhost:3000/reset-password?token=
+app.frontend.url=${FRONTEND_URL}
+app.frontend.reset-password-uri=${FRONTEND_RESET_PASSWORD_URI}
 #MVC
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
@@ -10,8 +10,8 @@ spring.datasource.url=${DB_URL}?rewriteBatchedStatements=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 # Redis
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
 spring.redis.timeout=6000
 # JPA
 spring.jpa.show-sql=true
@@ -55,7 +55,7 @@ logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr([%thread])
 spring.security.oauth2.client.registration.naver.client-name=naver
 spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENT_ID}
 spring.security.oauth2.client.registration.naver.client-secret=${NAVER_CLIENT_KEY}
-spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.redirect-uri=${BACKEND_URL}/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.scope=name,email
 # provider
@@ -68,7 +68,7 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 spring.security.oauth2.client.registration.google.client-name=google
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_KEY}
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=${BACKEND_URL}/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.google.scope=email, profile
 # Kakao
@@ -76,7 +76,7 @@ spring.security.oauth2.client.registration.google.scope=email, profile
 spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.client-id=${KAKAO_CLIENT_ID}
 spring.security.oauth2.client.registration.kakao.client-secret=${KAKAO_CLIENT_KEY}
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri=${BACKEND_URL}/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, profile_image
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
