feat: p6spy 로그 추가

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,7 +14,8 @@ spring.redis.host=${REDIS_HOST}
 spring.redis.port=${REDIS_PORT}
 spring.redis.timeout=6000
 # JPA
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
+decorator.datasource.p6spy.enable-logging=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.highlight_sql=true
 spring.jpa.properties.hibernate.format_sql=true
