--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     // DB
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    // P6SPY
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
     // QueryDSL
     implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
