--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -46,7 +46,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # Log
 spring.output.ansi.enabled=ALWAYS
-logging.level.org.hibernate.type=trace
+#logging.level.org.hibernate.type=trace
 logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr([%thread]){magenta} %clr(%-5level) %clr(%logger{36}){cyan} - %msg%n
 #logging.file.name=logs/application.log
 #logging.file.max-size=10MB
